# CV_Assignment1

./: .gitignore  README.md  basic_he.py  enviromnet.txt  he.py
Basic he method2: Separate equalization of the three color components/: he_rgb.py
CLAHE/: CLAHE.py
Equalization of the intensity component in HSI space/: he_hsi.py
assignment1/: enviromnet.txt
assignment1/CLAHE/: clahe说明.txt
assignment1/Equalization of the intensity component in HSI space/: he_hsi.py
assignment1/basic_he_on_YCrCb_space/: basic_he_ycrcb.py
assignment1/radial_clahe/: G_clahe_color.py  radial_clahe_color.py  radial_clahe_global.py  radial_clahe_local.py
assignment2/: README.md  disparity_computation.py  disparity_map.py  main.py
project/: README.md
project/3D_Reconstruction_Pipeline/: README.md  analyze_dense_correctly.py  colmap_dense_job.sh  colmap_fusion_job.sh  config_paths.py  export_refined_to_colmap.py  export_to_ceres.py  load_inputs.py  poses_global.py  post_clean_dense.py  run_stage1_sparse.py  sparse_reconstruction.py  visualization.py
project/3D_Reconstruction_Pipeline/ceres_ba/: CMakeLists.txt  ba_ceres_runner.cc
project/calibration/: README.md  calibrate_camera.py
project/calibration/results/: iphone_calibration.npz  terminal_result.txt
project/evaluation/: DENSITY_CALCULATION_FIX.md  evaluation.py  evaluation_fixed.py  results.txt  test.py
project/feature_extraction/: extract_features.py  extract_features_batch.py
project/feature_matching/: match_and_estimate_pose.py  matching.ipynb
project/feature_matching/result/: arch_pose_summary.csv  arch_pose_summary_new.csv  chinese_heritage_centre_pose_summary.csv  match_and_estimate_pose.py  pavilion_pose_summary.csv
radial_clahe/: G_clahe.py  Readme  radial_clahe.py
(+7575 files in other folders)
